--- a/README.adoc
+++ b/README.adoc
@@ -4,9 +4,7 @@
 
 Pour déployer TRAPTA-Score, il suffit de copier le contenue de ce répertoire dans votre espace d'hebergement.
 
-Seul le fichier users.json est à modifier pour y changer les valeurs de login / mot de passe des differents comptes a autoriser sur l'instance de TRAPTA-Score.
-
-Idéalement, l'accés à ce fichier doit être bloqué par un htaccess par exemple.
+Seul le fichier conf.php est à modifier pour y changer les valeurs de login / mot de passe des differents comptes a autoriser sur l'instance de TRAPTA-Score.
 
 Les prérequis techniques sont les suivants :
 
